# micrograd-from-scratch

./: README.md  notebook.ipynb  pyproject.toml
